src/objects/OCIO_Title_VI_Review__c.object
<CustomObject>
    <description>This object is for the Office of Civil Rights - Title VI application and used to track Title VI Compliance data reviews.</description>
    <fields>
        <fullName>OCR_504_Any_question_s_or_concern_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any question(s) or concern(s)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_504_Data_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data submitted regarding 504 compliance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Complete_name_and_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete name and address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Contact_Phone__c</fullName>
        <formula>OCR_Title_VI_Submission__r.OCR_Donee_Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Donee_Address__c</fullName>
        <formula>OCR_Title_VI_Submission__r.OCR_Donee_Account__r.BillingStreet &amp; &quot; &quot; &amp; OCR_Title_VI_Submission__r.OCR_Donee_Account__r.BillingCity &amp; &quot; &quot; &amp;  OCR_Title_VI_Submission__r.OCR_Donee_Account__r.BillingState &amp; &quot; &quot; &amp;  OCR_Title_VI_Submission__r.OCR_Donee_Account__r.BillingPostalCode</formula>
        <label>Donee Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Donee_Contact__c</fullName>
        <formula>TEXT(OCR_Title_VI_Submission__r.OCR_Donee_Contact__r.Salutation) + &quot; &quot; +  OCR_Title_VI_Submission__r.OCR_Donee_Contact__r.FirstName + &quot; &quot; + OCR_Title_VI_Submission__r.OCR_Donee_Contact__r.LastName</formula>
        <label>Donee Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Donee_ID__c</fullName>
        <formula>OCR_Title_VI_Submission__r.OCR_Donee_Account__r.OCR_ID__c</formula>
        <label>Donee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Donee_Name__c</fullName>
        <formula>OCR_Title_VI_Submission__r.OCR_Donee_Account__r.Name</formula>
        <label>Donee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Estimated_amount_of_time_spent__c</fullName>
        <formula>TEXT ( OCR_Title_VI_Submission__r.OCR_Number_of_Hours__c )</formula>
        <label>Estimated amount of time spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Find_out_about_property_availability__c</fullName>
        <formula>OCR_Title_VI_Submission__r.OCR_Property_Availability__c</formula>
        <label>Find out about property availability?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_GSA_Region__c</fullName>
        <formula>OCR_Title_VI_Submission__r.OCR_Donee_Account__r.OCR_GSA_Region__c</formula>
        <label>GSA Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_IS_chart_completed_for_IIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is chart completed for IIA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_LEP_Any_costs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any costs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_LEP_Any_question_s_or_concern_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any question(s) or concern(s)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_LEP_Cost_s_reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost(s) reported to provide LEP assist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_LEP_How_does_donee_communicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>How does donee communicate with them?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_LEP_How_to_notify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>How to notify LEP population of assist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_LEP_Provide_services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provide services to LEP Individuals?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_LEP_What_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>What language(s) do they encounter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Marketing_Any_question_s_or_concern__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any question(s) or concern(s)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Nature_and_type_of_organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nature and type of organization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Preparation_Date__c</fullName>
        <formula>&quot;Prepared &quot; +  TEXT(OCR_Title_VI_Submission__r.OCR_Preparation_Date__c) + &quot; and Submitted &quot; +  IF(OR (ISPICKVAL(OCR_Title_VI_Submission__r.OCR_Submission_Status__c , &quot; Submitted &quot;), ISPICKVAL(OCR_Title_VI_Submission__r.OCR_Submission_Status__c , &quot; Reviewed &quot;)),  TEXT(OCR_Title_VI_Submission__r.LastModifiedDate ), &quot;&quot;)</formula>
        <label>Preparation Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Problems_obtaining_the_property__c</fullName>
        <formula>TEXT ( OCR_Title_VI_Submission__r.OCR_Problems_Experienced__c)</formula>
        <label>Problems obtaining the property needed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Quality_of_property__c</fullName>
        <formula>TEXT (OCR_Title_VI_Submission__r.OCR_Property_Quality__c)</formula>
        <label>Quality of property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_REVIEW_RESULTS__c</fullName>
        <label>Review Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Review</fullName>
                </value>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non-Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Review_Completion_Date__c</fullName>
        <label>Review Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OCR_Review_Notes__c</fullName>
        <label>Review Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Reviewer__c</fullName>
        <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
        <label>Reviewer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Section_IV_complaint_data_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was complaint data submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Title_IV_any_question_concern__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present any question(s) or concern(s)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Title_IX_Any_question_s_or_concern_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any question(s) or concern(s)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Title_IX_Data_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data submitted regarding Title IX comp?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Title_IX_Grievance_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grievance Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Title_IX_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title IX Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Title_VI_Review_ID__c</fullName>
        <formula>HYPERLINK(&quot;/apex/TitleVIReview?id=&quot;+ OCR_Title_VI_Submission__c,   Name , &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title VI Review ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Title_VI_Submission__c</fullName>
        <label>Title VI Submission</label>
        <referenceTo>OCIO_Title_VI_Submission__c</referenceTo>
        <relationshipLabel>Title VI Reviews</relationshipLabel>
        <relationshipName>Title_VI_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OCR_VI_Any_information_omitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any information omitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_VI_Are_donee_explanation_acceptable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are donee&apos;s explanation(s) acceptable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_V_How_did_you_learn__c</fullName>
        <label>How did you learn about the program?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>Information Briefing/Presentation</fullName>
                </value>
                <value>
                    <fullName>Television or radio</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_marketing_Data_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data submitted regarding marketing?</label>
        <type>Checkbox</type>
    </fields>
    <label>Title VI Review</label>
    <nameField>
        <displayFormat>TVIR-{0000000}</displayFormat>
        <label>Title VI Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Title VI Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>